--- a/CSS_advanced/styles/2-style.css
+++ b/CSS_advanced/styles/2-style.css
@@ -2,5 +2,5 @@ html{scroll-behavior: smooth;}
 body{color: #161616 }
 a{color: #161616}
 visually-hidden{display: none}
-card-category{color: #D73953}
-sectiont-tagline{color: #D73953}
+.card-category{color: #D73953}
+.section-tagline{color: #D73953}
