--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -1,20 +1,37 @@
-html{scroll-behavior: smooth; font-size: 62.5%;}
-a{color: var(text-color(--color-black))}
-body{
-    font-family: var(--font-family-base);
-    size: var(font-size(--font-size-medium));
+html {
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+  }
+  
+  a {
     color: var(text-color(--color-black));
-}
-h1, h2, h3, h4, h5, h6{font-family: var(--font-family-title);}
-visually-hidden{display: none}
-.card-category, .section-tagline{color: var(--color-primary)}
-:root {
+  }
+  
+  body {
+    font-family: car(font-family-base);
+    size: var(font-size-medium);
+    color: var(text-color(--color-black));
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: var(font-family-title);
+  }
+  
+  .visually-hidden {
+    display: none;
+  }
+  
+  .card-category, .section-tagline {
+    color: var(color-primary);
+  }
+  
+  :root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
-    --color-dark-grey: #353535
-    --text-color: var(--color-black);
+    --color-dark-grey: #353535;
+    --text-color: $color-black;
     --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
@@ -22,4 +39,4 @@ visually-hidden{display: none}
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-}
+  }
