--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -4,13 +4,13 @@ html {
   }
   
   a {
-    color: var(--color-black);
+    --text-color: var(--color-black);
   }
   
   body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
-    color: var(--color-black);
+    --text-color: var(--color-black);
   }
   
   h1, h2, h3, h4, h5, h6 {
