--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -10,7 +10,7 @@ html {
   body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
-    --text-color: var(--color-black);
+    color: var(--text-color);
   }
   
   h1, h2, h3, h4, h5, h6 {
