--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -1,5 +1,5 @@
 html{scroll-behavior: smooth;}
-body, a{color: var(--text-color)}
+body, a{color: var(text-color)}
 body{font-family: var(--font-family-base);}
 h1, h2, h3, h4, h5, h6{font-family: var(--font-family-title);}
 visually-hidden{display: none}
