changed some things

--- a/CSS_advanced/styles/11-style.css
+++ b/CSS_advanced/styles/11-style.css
@@ -5,6 +5,7 @@ html {
   
   a {
     --text-color: var(--color-black);
+    text-decoration: none;
   }
   
   body {
@@ -24,10 +25,20 @@ html {
     display: none;
   }
   
-  .card-category, .section-tagline {
+  .card-category{
     color: var(--color-primary);
   }
+
+  .section-header{
+    text-align: var(--section-header-align);
+  }
   
+  .section-tagline{
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
+  }
   :root {
     --color-primary: #D73953;
     --color-black: #090909;
@@ -35,8 +46,8 @@ html {
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
+    --font-family-title: Raleway, Helvetica Neue, Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
