i dont know why 3 isnt working

--- a/sass_scss/9-extend_list.scss
+++ b/sass_scss/9-extend_list.scss
@@ -1,16 +1,13 @@
-$green: #00FF00;
-$red: #FF00FF;
-
 .info {
     font-size: 12px;
 }
 
 .success {
     @extend .info;
-    color: $green;
+    color: #00FF00;
 }
 
 .success {
     @extend .info;
-    color: $red;
+    color: #FF0000;
 }
