stupi dumdum changes

--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,7 +1,7 @@
 $darkgrey: #3D3D3D;
 body {
-    $text-color: $darkgrey;
+    $font-color: $darkgrey;
 }
 p {
-    $text-color: $darkgrey;
+    $font-color: $darkgrey;
 }
