im gonna lose my mind

--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,7 +1,7 @@
 $darkgrey: #3D3D3D;
 body {
-    $color: $darkgrey;
+    color: $darkgrey;
 }
 p {
-    $color: $darkgrey;
+    color: $darkgrey;
 }
