--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -373,12 +373,13 @@
   }
   /* Section Latest news 
       ============================= */
-  .row .section-latest-news {
+  .section-latest-news .row {
+    display: flex;
     flex-direction: row-reverse;
   }
   /* Section SERVICES 
       ============================= */
-  .row .selection-services {
+  .selection-services .row {
     flex-wrap: wrap;
   }
   /*** 4. CARD ***/
