i spelled section wronng

--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -379,7 +379,7 @@
   }
   /* Section SERVICES 
       ============================= */
-  .selection-services .row {
+  .section-services .row {
     flex-wrap: wrap;
   }
   /*** 4. CARD ***/
