--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -599,6 +599,6 @@
     .tag-list li::after {
       content: ", ";
     }
-    .tag-list li:after:last-child {
+    .tag-list li:last-child::after {
       content:"";
     }
