--- a/form/01-styles.css
+++ b/form/01-styles.css
@@ -645,14 +645,14 @@
     margin: 10rem 0 0 auto;
     padding-left: 7rem; 
   }
-  .section-title {
+  .post-comments .section-title {
     font-variant: small-caps;
   }
-  /* Basic form
-    ============================= */
-    .form {
-      display: flex;
-      flex-direction: column;
-      padding: 1rem 0;
-      margin: 0;
-    }
+/* Basic form
+  ============================= */
+  form {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0;
+    margin: 0;
+  }
