--- a/form/02-styles.css
+++ b/form/02-styles.css
@@ -660,6 +660,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    border: 0;
+    border: none;
     padding: 0 0 2rem;
   }
