--- a/form/07-styles.css
+++ b/form/07-styles.css
@@ -746,7 +746,7 @@
   width: 1.5rem;
   height: 1.5rem;
 }
-.form-search .input[type="search"] {
+.form-search input[type="search"] {
   display: inline-block;
   color: var(--color-white);
   padding-right: 2rem;
@@ -761,7 +761,7 @@
   z-index: 3;
   transition: width .4s cubic-bezier(0, 0.795, 0, 1);
 }
-.form-search .input[type="search"]:focus {
+.form-search input[type="search"]:focus {
   position: relative;
   width: 15rem;
   z-index: 1;
